--- a/src/components/Hello/Hello.css
+++ b/src/components/Hello/Hello.css
@@ -1,70 +1,124 @@
 .hello {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-    margin: 137px auto 0;
+    max-width: 340px;
+    margin: 42px auto 22px 0;
+    border-radius: 0px 20px 20px 0px;
+    background: linear-gradient(180deg, rgba(247, 168, 61, 0.30) 0%, rgba(255, 244, 241, 0.00) 60%);
+    border: 1px solid #F7A83D;
+}
+
+.hello__logo {
+    max-width: 195px;
+    max-height: 55px;
+    border-radius: 0 0 10px 10px;
+    margin: 0 auto;
+    background-color: #F7A83D;
+}
+
+.hello__image {
+    margin: 19px 41px 19.8px;
+}
+
+.hello__menu {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 145px 45px 0;
+}
+
+.hello__menu-list {
+    list-style: none;
+    margin: 32px 0 0;
+    max-width: 300px;
+}
+
+.hello__list-marker {
+    min-width: 24px;
+    min-height: 24px;
+    margin-right: 19px;
+}
+
+.hello__list-marker_1 {
+    background-image: url(../../images/ico1.svg);
+}
+
+.hello__list-marker_2 {
+    background-image: url(../../images/ico2.svg);
+}
+
+.hello__list-marker_3 {
+    background-image: url(../../images/ico3.svg);
+}
+
+.hello__list-marker_4 {
+    background-image: url(../../images/ico4.svg);
+}
+
+.hello__menu-text {
+    margin: 0;
+    min-width: 300px;
+}
+
+.hello__menu-link {
+    color: var(--dark-grey, #3A3A3A);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none;
+    display: flex;
+    align-items: flex-end;
+}
+
+.hello__robo {
+    max-width: 100px;
 }
 
 .hello__container {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.hello__logos {
-    border-right: 2px solid #D9D9D9;
-}
-
-.hello__logos:nth-child(2){
-    border: none;
-}
-
-.hello__logos:last-child {
-    border: none;
-}
-
-.hello__logos-title_logo {
-    margin-right: 162px;
-    height: 70px;
-    max-width: 650px;
-    max-height: 80px;
-}
-
-.hello__logos-subtitle {
-    margin-left: 162px;
-    color: #3A3A3A;
-    font-weight: 400;
-    font-size: 43px;
+    margin: 141px auto 127px;
 }
 
 .hello__robo-container {
-    background: linear-gradient(to top, white,white, rgb(189, 76, 78, .5));
-    border: 1px solid #A30236;
-    border-radius: 10px;
+    background: linear-gradient(to top, #FFFBF6,#FFFBF6);
+    border: 1px solid #F7A83D;
+    border-radius: 16.4px;
     padding: 20px;
     position: relative;
     margin-left: 24px;
+    max-width: 147px;
 }
 
 .hello__robo-container::before, .hello__robo-container::after {
     content: ''; 
+    background: linear-gradient(to top, #FFFBF6, #FFFBF6);
     position: absolute;
     left: -20px; 
     top: 70px;
     border: 10px solid transparent;
-    border-right: 10px solid #A30236;
+    border-right: 10px solid #F7A83D;
 }
 
 .hello__robo-container::after {
-    border-right: 10px solid white;
+    border-right: 15px solid #FFFBF6;
 }
 
 .hello__robo-title {
-    color: #A30236;
+    color: var(--dark-red, #921A1D);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0;
 }
 
 .hello__robo-subtitle {
-    max-width: 243px;
-    color: #3A3A3A;
+    color: var(--dark-grey, #3A3A3A);
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
