--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,12 @@
 .footer {
     display: flex;
     align-items: center;
-    /* justify-content: space-around; */
+    justify-content: center;
+    max-width: 1260px;
     border-radius: 10px 10px 0px 0px;
     background: #F7A83D;
-    min-width: 1260px;
+    width: 100%;
+    height: 80px;
     margin: 160px auto 0;
 }
 
@@ -26,6 +28,7 @@
     border: 1px solid #FFF;
     max-width: 295px;
     padding: 0;
+    cursor: pointer;
 }
 
 .footer__btn-text {
