refactor: Version 2.1 (create slider)

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,5 +2,6 @@
     display: flex;
     max-width: 1570px;
     align-items: center;
-    overflow-x: auto;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
 }
