--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -4,6 +4,23 @@
     grid-template-columns: 456px 456px;
     gap: 22px 40px;
     position: relative;
+    scroll-snap-align: center;
+    flex-shrink: 0;
+    
+}
+
+.desc__last {
+    margin: 45px 212px 0 312px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    scroll-snap-align: center;
+    flex-shrink: 0;
+    
+}
+
+.desc__last-block {
+    display: flex;
 }
 
 .desc__block {
@@ -21,6 +38,16 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    text-transform: uppercase;
+}
+
+.desc__title_main {
+    color: var(--dark-grey, #3A3A3A);
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 4px;
     text-transform: uppercase;
 }
 
@@ -52,6 +79,9 @@
     align-items: center;
     position: relative;
     margin: 0 100px;
+    scroll-snap-align: center;
+    flex-shrink: 0;
+    
 }
 
 .desc__block2_container {
