--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -4,4 +4,9 @@
     align-items: center;
     overflow-x: scroll;
     scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
 }
+
+.section__slider::-webkit-scrollbar {
+    width: 0;
+  }
