--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -1,38 +1,51 @@
 .desc {
-    margin: 45px 212px 0 312px;
-    display: grid;
+    margin: 45px 212px 0 230px;
+    display: grid !important;
     grid-template-columns: 456px 456px;
     gap: 22px 40px;
     position: relative;
-    scroll-snap-align: center;
     flex-shrink: 0;
-    
+    max-width: 1300px;
 }
 
 .desc__last {
-    margin: 45px 212px 0 312px;
-    display: flex;
+    margin: 45px 212px 0 210px;
+    display: flex !important;
     flex-direction: column;
     align-items: center;
-    scroll-snap-align: center;
     flex-shrink: 0;
-    
+    max-width: 1300px;
+    width: 952px !important;
+}
+
+.desc__last-title {
+    color: var(--dark-grey, #3A3A3A);
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 4px;
+    text-transform: uppercase;
 }
 
 .desc__last-block {
     display: flex;
+    gap: 40px;
 }
 
 .desc__block {
-    padding: 20px 20px 20px 40px;
+    padding: 20px 45px 20px 40px;
     border: 1px solid #F7A83D;
     border-radius: 7px;
     background: #FEF4E6;
+    max-width: 454px;
+    max-height: 262px;
 }
 
 .desc__title {
     margin: 0;
-    max-width: 315px;
+    /* max-width: 315px; */
+    width: 371px;
     color: var(--dark-grey, #3A3A3A);
     font-size: 20px;
     font-style: normal;
@@ -61,7 +74,7 @@
     margin: 30px 0 0;
     max-width: 295px;
     color: var(--dark-grey, #3A3A3A);
-    font-size: 17.4px;
+    font-size: 17px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -74,14 +87,13 @@
 }
 
 .desc__block2 {
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
     align-items: center;
     position: relative;
     margin: 0 100px;
-    scroll-snap-align: center;
     flex-shrink: 0;
-    
+    max-width: 1300px;
 }
 
 .desc__block2_container {
@@ -93,6 +105,8 @@
 
 .desc__block2_three {
     background-image: url(../../images/smartphone1.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     min-width: 365px;
     min-height: 643px;
     display: flex;
@@ -139,6 +153,9 @@
 
 .desc__button {
     cursor: pointer;
+    width: 152px;
+    height: 147px;
+    
 }
 
 .desc__button_slider {
@@ -163,8 +180,8 @@
 
 .cloud {
     position: absolute;
-    top: -10%;
-    left: 30%;
+    top: 0%;
+    left: 17%;
 }
 
 .cloud__text {
@@ -173,12 +190,32 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-
     position: absolute;
-    top: -1.5%;
-    left: 33%;
+    top: 10%;
+    left: 20.5%;
 }
 
 .slider__image {
     max-width: 350px;
+}
+
+.desc__last-btns {
+    display: flex;
+    gap: 40px;
+    margin: 71px auto 0;
+}
+
+.desc__last-btn {
+    padding: 25px 0 16px;
+    border-radius: 10px;
+    border: 3px solid #F7A83D;
+    background: #F7A83D;
+    width: 456px;
+    color: #FFF;
+    text-align: center;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    cursor: pointer;
 }
