--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -91,7 +91,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    margin: 0 100px;
+    margin: 0 auto;
     flex-shrink: 0;
     max-width: 1300px;
 }
