--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -9,7 +9,7 @@
 }
 
 .desc__last {
-    margin: 45px 212px 0 210px;
+    margin: 45px auto 0;
     display: flex !important;
     flex-direction: column;
     align-items: center;
