--- a/src/components/Hello/Hello.css
+++ b/src/components/Hello/Hello.css
@@ -56,6 +56,10 @@
     background-image: url(../../images/ico4.svg);
 }
 
+.hello__list-marker_5 {
+    background-image: url(../../images/ico5.svg);
+}
+
 .hello__menu-text {
     margin: 0;
     min-width: 300px;
@@ -80,7 +84,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 141px auto 127px;
+    margin: 141px auto 0;
 }
 
 .hello__robo-container {
@@ -122,4 +126,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.hello__menu-home {
+    margin: 45px 45px 0;
+    max-width: 300px;
 }
