refactor: Version 2.1 (add video)

--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -116,6 +116,7 @@
 
 .desc__block2_three_two {
     background-image: url(../../images/smartphone5.svg);
+    background-size: 100%;
 }
 
 .desc__block2_three_three {
