--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
     background: #F7A83D;
     width: 100%;
     height: 80px;
-    margin: 160px auto 0;
+    margin: 0 auto 0;
 }
 
 .footer__fddlogo {
